【FIX】PlaneState整合